--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head profile="">
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css" type="text/css">
         <title>Seed Practice Footer</title>
@@ -12,73 +12,75 @@
             <div class="footer-primary">
                 <div class="feature-card">
                     <div>
-                        <img src="assets/warranty-icon-png-1.png">
+                        <img src="assets/warranty-icon-png-1.png" alt="Warranty icon" title="Warranty">
                     </div>
                     <div class="card-copy">
-                        <h3>Lorem ipsum dolor</h3>
+                        <h6>Lorem ipsum dolor</h6>
                         <p>Esse cillum dolore eu<br> fugiat nulla pariatur</p>
                     </div>
                 </div>
                 <div class="feature-card">
                     <div>
-                        <img src="assets/ecommerce-return-icon.png">
+                        <img src="assets/ecommerce-return-icon.png" alt="Ecommerce icon" title="Ecommerce">
                     </div>
                     <div class="card-copy">
-                        <h3>Eaque ipsa</h3>
+                        <h6>Eaque ipsa</h6>
                         <p>Qui officia,<br> deserunt mollit anim id</p>
                     </div>
                 </div>
                 <div class="feature-card">
                     <div>
-                        <img src="assets/checked-256.png">
+                        <img src="assets/checked-256.png" alt="Check icon" title="Check">
                     </div>
                     <div class="card-copy">
-                        <h3>Commodo consequat</h3>
+                        <h6>Commodo consequat</h6>
                         <p>Neque porro quisquam est,<br> qui dolorem, ipsum quia</p>
                     </div>
                 </div>
             </div>
             <div class="footer-secondary">
-                <div class="newsletter-form">
-                    <form>
-                        Subscribe to our newsletter<br>
-                        <i class="subscribe-icon">
-                            <a href="#"><img src="assets/arrow.png"></a>
-                        </i>
+                <form class="newsletter-form">
+                    <p>Subscribe to our newsletter</p>
+                    <div>    
                         <input type="email" name="email" placeholder="Email Address">
-                    </form>
-                </div>
+                        <button class="subscribe-button" type="submit"></button>
+                    </div>
+                </form>
                 <div class="footer-nav">
-                    <ul>
-                        <li>Get to know us</li>
-                        <li><a href="#">Our Story</a></li>
-                        <li><a href="#">Media</a></li>
-                        <li><a href="#">International Stockists</a></li>
-                    </ul>
-                    <ul>
-                        <li>Let us help you</li>
-                        <li><a href="#">Contact Us</a></li>
-                        <li><a href="#">Your Account</a></li>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Shipping & Returns</a></li>
-                        <li><a href="#">Terms & Conditions</a></li>
-                    </ul>
+                    <div class="secondary-nav">
+                        <p>Get to know us</p>
+                        <ul>
+                            <li><a href="#">Our Story</a></li>
+                            <li><a href="#">Media</a></li>
+                            <li><a href="#">International Stockists</a></li>
+                        </ul>
+                    </div>
+                    <div class="secondary-nav">
+                        <p>Let us help you</p>
+                        <ul>
+                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="#">Your Account</a></li>
+                            <li><a href="#">FAQ</a></li>
+                            <li><a href="#">Shipping & Returns</a></li>
+                            <li><a href="#">Terms & Conditions</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
             <div class="site-credentials">
-                    <div class="social-links">
-                        <a href="#">
-                            <img src="assets/facebook-1184346466-copy.png">
-                        </a>
-                        <a href="#">
-                            <img src="assets/instagram-2-copy-2.png">
-                        </a>
-                        <a href="#">
-                            <img src="assets/youtube-icons.png">
-                        </a>
-                    </div>
-                    <p>© 2019 SEED Shopify Development Test</p>
+                <div class="social-links">
+                    <a href="#">
+                        <img src="assets/facebook-1184346466-copy.png" alt="Facebook link" title="Facebook">
+                    </a>
+                    <a href="#">
+                        <img src="assets/instagram-2-copy-2.png" alt="Instagram link" title="Instagram">
+                    </a>
+                    <a href="#">
+                        <img src="assets/youtube-icons.png" alt="Youtube link" title="YouTube">
+                    </a>
                 </div>
+                <p>© 2019 SEED Shopify Development Test</p>
+            </div>
         </footer>
     </body>
 </html>
